fix(events): overlapping issue

--- a/blocks/events/events.css
+++ b/blocks/events/events.css
@@ -81,7 +81,7 @@
   
   .filter-wrapper {
     margin: 0 40px 0 0;
-    max-width: 310px;
+    max-width: 291px;
     opacity: 1;
     padding: 20px;
     transition: var(--base-transition-2);
